--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 body {
     margin: 0px;
     font-family: 'Cocogoose';
+    overflow-x: hidden;
 }
 
 #content {
@@ -20,6 +21,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: -92px;
 }
 
 .infoBox {
@@ -59,16 +61,17 @@ body {
 }
 
 .header {
-    margin-top: -1080px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 5px;
-    z-index: 10;
+    position: relative;
+    z-index: 99 !important;
     
 }
+
 
 .logo {
     font-size: 35px;
@@ -111,7 +114,6 @@ button:hover{
     flex-direction: column;
     background-image: url(./images/home-body2.png);
     height: 480px;
-    margin-top: 1000px;
     justify-content: center;
 }
 
@@ -131,3 +133,90 @@ button:hover{
     color: aliceblue;
     font-size: 16px;
 }
+
+.menu-image {
+    background-image: url(images/menu-image.jpg);
+    height: 808px;
+    border: 0px;
+    margin-top: -92px;
+    width: 100%;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    background-color: #81302a;
+    width: 100%;
+    padding-bottom: 35px;
+}
+
+.menu-header {
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 32px;
+    color: #FAF9F6;
+    text-shadow: -1px 1px 2px rgb(117, 31, 31),
+				  1px 1px 2px rgb(117, 31, 31),
+				  1px -1px 2px rgb(117, 31, 31),
+				  -1px -1px 2px rgb(117, 31, 31);
+}
+
+.menu-body {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.menu-types {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.menu-item {
+    color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    background-color: #FAF9F6;
+    width: 360px;
+    cursor: pointer;
+}
+
+.menu-item:hover{
+    transform: scale(1.07);
+  }
+
+.item-header {
+    margin-top: 15px;
+}
+
+.menu-item-info {
+    font-size: 14px;
+    margin: 15px;
+}
+
+#chutoro-img {
+    background-image: url(images/chutoro.png);
+    height: 360px;
+    width: 360px;}
+#salmon-img {
+    background-image: url(images/salmon.png);
+    height: 360px;
+    width: 360px;}
+#uni-img {
+    background-image: url(images/uni.png);
+    height: 360px;
+    width: 360px;
+}
+#unagi-img {
+    background-image: url(images/unagi.png);
+    height: 360px;
+    width: 360px;}
